# subgrader

./: .gitignore  Cargo.toml  README.md  lista1a  main.py
app/: Cargo.toml
app/src/: beecrowd_parser.rs  classroom_downloader.rs  lib.rs  similarity_checker.rs
classroom/: Cargo.toml
classroom/src/: api.rs  client.rs  models.rs
cli/: Cargo.toml
cli/src/: beecrowd.rs  cli.rs  comparator.rs  downloader.rs  main.rs  utils.rs
reporter/: Cargo.toml
reporter/src/: lib.rs
scripts/: main.py  mainReduzido.py  similarity.py
similarity/: Cargo.toml
similarity/src/: lib.rs
subgrader/: Cargo.toml
subgrader/src/: main.rs
