[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
classroom = { path = "../classroom" }
reporter = { path = "../reporter" }
similarity = { path = "../similarity" }
rayon = { version = "1.11.0" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = { version = "0.3.14" }
zip = { version = "4.5.0" }
futures = { version = "0.3" }
regex = { version = "1.11.2" }
csv = { version = "1.3.1" }
serde = { version = "1.0", features = ["derive"] }
