[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
classroom = { path = "../classroom" }
reporter = { path = "../reporter" }
similarity = { path = "../similarity" }
rayon = { version = "1.11.0" }
tokio = { version = "1", features = ["full"] }
indicatif = { version = "0.18" }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = { version = "0.3.14" }
colored = { version = "2.0" }
zip = { version = "4.5.0" }
futures = { version = "0.3" }
regex = { version = "1.11.2" }
dialoguer = { version = "0.12.0" }
