[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app" }
classroom = { path = "../classroom" }
reporter = { path = "../reporter" }
tokio = { version = "1", features = ["full"] }
colored = { version = "2.0" }
dialoguer = { version = "0.12.0", features = ["completion"] }
